fix: remove scrollbar on wallet list

--- a/src/common/Components/Card/Card.module.css
+++ b/src/common/Components/Card/Card.module.css
@@ -29,6 +29,8 @@
 .cardContent {
   height: 100%;
   overflow-y: auto;
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
 }
 
 .cardFooter {
